# lfm-train-image

./: .dockerignore  Dockerfile  README.md  pyproject.toml  ssh-entrypoint.sh  sshd-hardening.conf
.github/workflows/: build.yml
variants/fa2/: pyproject.toml
variants/generic/: pyproject.toml
